trasnverse and longitudinal tracking pyheadtail

--- a/references.bib
+++ b/references.bib
@@ -510,7 +510,12 @@ edition = {2}
   note = {Accessed: 5-6-2022},
 }
 
-
+@misc{pyheadtail_manual_adrian,
+  title = {An overview of PyHEADTAIL},
+  author = {Adrian Oeftiger},
+  url  =  {https://cds.cern.ch/record/2672381/files/CERN-ACC-NOTE-2019-0013.pdf},
+  note = {Accessed: 05-06-2022},
+}
 
 @misc{pyheadtail_schenk,
   title = {Beam dynamics simulations with the PyHEADTAIL and PyECLOUD macroparticle codes.},
@@ -519,5 +524,11 @@ edition = {2}
   note = {Accessed: 05-06-2022},
 }
 
-
-
+@thesis{Schenk:2665819,
+      author        = "Schenk, Michael",
+      title         = "{A novel approach to Landau damping of transverse
+                       collective instabilities in future hadron colliders}",
+      year          = "2019",
+      url           = "https://cds.cern.ch/record/2665819",
+      note          = "Presented 05 Feb 2019",
+}
