--- a/references.bib
+++ b/references.bib
@@ -532,3 +532,12 @@ edition = {2}
       url           = "https://cds.cern.ch/record/2665819",
       note          = "Presented 05 Feb 2019",
 }
+
+@inproceedings{inproceedings_ibs_pyheadtail,
+author = {Rodin, Volodymyr and Oeftiger, A. and Welsch, Carsten},
+year = {2021},
+month = {11},
+pages = {},
+title = {Simulation of intra-beam scattering in PyHEADTAIL},
+doi = {10.18429/JACoW-IPAC2021-WEPAB215}
+}
