start introduction about hl-lhc

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,12 @@
+@misc{HL-LHC,
+  title = {High-Luminosity Large Hadron Collider (HL-LHC): Technical design report},
+  howpublished = {CERN Yellow Reports: Monographs},
+  year         = {2020},
+  note = {doi:= 10.23731/CYRM-2020-0010},
+}
+
+https://home.cern/science/accelerators/high-luminosity-lhc
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
@@ -504,11 +513,6 @@ edition = {2}
       url           = "https://cds.cern.ch/record/2141779",
 }
 
-@misc{pyheadtail_repository,
-  title = {PyHEADTAIL code repository},
-  url  =  {https://github.com/PyCOMPLETE/PyHEADTAIL},
-  note = {Accessed: 5-6-2022},
-}
 
 @misc{pyheadtail_manual_adrian,
   title = {An overview of PyHEADTAIL},
@@ -541,3 +545,5 @@ pages = {},
 title = {Simulation of intra-beam scattering in PyHEADTAIL},
 doi = {10.18429/JACoW-IPAC2021-WEPAB215}
 }
+
+
