catchin up from bangkok airport work

--- a/references.bib
+++ b/references.bib
@@ -546,4 +546,16 @@ title = {Simulation of intra-beam scattering in PyHEADTAIL},
 doi = {10.18429/JACoW-IPAC2021-WEPAB215}
 }
 
+@misc{pyheadtail_manual_adrian,
+  title = {An overview of PyHEADTAIL},
+  author = {Adrian Oeftiger},
+  url  =  {https://cds.cern.ch/record/2672381/files/CERN-ACC-NOTE-2019-0013.pdf},
+  note = {Accessed: 05-06-2022},
+}
 
+
+@misc{pyheadtail_repository,
+  title = {PyHEADTAIL code repository},
+  url  =  {https://github.com/PyCOMPLETE/},
+  note = {Accessed: 19-6-2022},
+}
