cern accelerator complex

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,39 @@
+@book{Brüning:782076,
+      author        = "Brüning, Oliver Sim and Collier, Paul and Lebrun, P and
+                       Myers, Stephen and Ostojic, Ranko and Poole, John and
+                       Proudlock, Paul",
+      title         = "{LHC Design Report}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "CERN Yellow Reports: Monographs",
+      year          = "2004",
+      url           = "https://cds.cern.ch/record/782076",
+      doi           = "10.5170/CERN-2004-003-V-1",
+}
+
+@article{ATLAS_Higgs,
+      author        = "ATLAS collaboration",
+      title         = {Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC},
+      journal       = "Physics Letters B",
+      volume        = "716  (1)",
+      pages         = "1-29",
+      year          = "2012",
+      doi           = https://doi.org/10.1016/j.physletb.2012.08.020,
+      url           = "https://www.sciencedirect.com/science/article/pii/S037026931200857X",
+}
+
+@article{CMS_Higgs,
+      author        = "CMS collaboration",
+      title         = {Observation of a new boson at a mass of 125 GeV with the CMS experiment at the LHC},
+      journal       = "Physics Letters B",
+      volume        = "716  (1)",
+      pages         = "30-61",
+      year          = "2012",
+      doi           = https://doi.org/10.1016/j.physletb.2012.08.021,
+      url           = "https://www.sciencedirect.com/science/article/pii/S0370269312008581",
+}
+
+
 @misc{HL-LHC,
   title = {High-Luminosity Large Hadron Collider (HL-LHC): Technical design report},
   howpublished = {CERN Yellow Reports: Monographs},
