first commit for hl-lhc

--- a/references.bib
+++ b/references.bib
@@ -34,6 +34,28 @@
 }
 
 
+@misc{HL_LHC_yellow_report,
+  doi = {10.23731/CYRM-2020-0010},
+  url = {https://e-publishing.cern.ch/index.php/CYRM/issue/view/127},
+  author = {{CERN Yellow Reports: Monographs}},
+  language = {en},
+  title = {CERN Yellow Reports: Monographs,  Vol. 10 (2020): High-Luminosity Large Hadron Collider (HL-LHC): Technical design report},
+  publisher = {CERN Yellow Reports: Monographs},
+  year = {2020},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@book{Brning2015,
+  doi = {10.1142/9581},
+  url = {https://doi.org/10.1142/9581},
+  year = {2015},
+  month = feb,
+  publisher = {{WORLD} {SCIENTIFIC}},
+  author = {Oliver Br\"{u}ning and Lucio Rossi},
+  title = {The High Luminosity Large Hadron Collider}
+}
+
+
 @misc{HL-LHC,
   title = {High-Luminosity Large Hadron Collider (HL-LHC): Technical design report},
   howpublished = {CERN Yellow Reports: Monographs},
