describe luminosity formula

--- a/references.bib
+++ b/references.bib
@@ -55,6 +55,13 @@
   title = {The High Luminosity Large Hadron Collider}
 }
 
+@misc{luminosity,
+  title = {“Particle Colliders and Concept of Luminosity”},
+  author = {W. Herr},
+  howpublished = {at CERN Accelerator School},
+  year         = {2012},
+  url = {https://cas.web.cern.ch/sites/default/files/lectures/constanta-2018/l1.pdf},
+}
 
 
 @misc{HL-LHC,
