visualisation of cc simple kick

--- a/references.bib
+++ b/references.bib
@@ -64,11 +64,13 @@
 }
 
 
-@misc{HL-LHC,
-  title = {High-Luminosity Large Hadron Collider (HL-LHC): Technical design report},
-  howpublished = {CERN Yellow Reports: Monographs},
-  year         = {2020},
-  note = {doi:= 10.23731/CYRM-2020-0010},
+@article{Calaga:2673544,
+      author        = "Calaga, Rama",
+      title         = "{Crab Cavities for the High-luminosity LHC}",
+      pages         = "THXA03. 5 p",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2673544",
+      doi           = "10.18429/JACoW-SRF2017-THXA03",
 }
 
 https://home.cern/science/accelerators/high-luminosity-lhc
