checkout after adding references for image

--- a/references.bib
+++ b/references.bib
@@ -63,17 +63,13 @@
   url = {https://cas.web.cern.ch/sites/default/files/lectures/constanta-2018/l1.pdf},
 }
 
-
-@article{Calaga:2673544,
-      author        = "Calaga, Rama",
-      title         = "{Crab Cavities for the High-luminosity LHC}",
-      pages         = "THXA03. 5 p",
-      year          = "2018",
-      url           = "https://cds.cern.ch/record/2673544",
-      doi           = "10.18429/JACoW-SRF2017-THXA03",
+@misc{LHC_SPS_layout,
+  title = {First Results from the Large Hadron Collider},
+  author = {Hans Peter Beck},
+  url  =  {https://www.sps.ch/artikel/progresses/first-results-from-the-large-hadron-collider-24},
+  note = {Accessed: 24-06-2022},
 }
 
-https://home.cern/science/accelerators/high-luminosity-lhc
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
