finalising lhc laytou

--- a/references.bib
+++ b/references.bib
@@ -70,6 +70,17 @@
   note = {Accessed: 24-06-2022},
 }
 
+@misc{LHC_SPS_layout_v2,
+  title = {Design and Prototyping
+of HL-LHC Double Quarter Wave Crab Cavities},
+  author = {Silvia Verdú-Andrés},
+  howpublished = {Talk presented at th International Particle Accelerator Conference in 2015, Richmond VA (USA)},
+  url  =  {https://accelconf.web.cern.ch/IPAC2015/talks/mobd2_talk.pdf},
+  note = {Accessed: 24-06-2022},
+}
+
+
+
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
