add figures on crab cavity crossing

--- a/references.bib
+++ b/references.bib
@@ -63,6 +63,15 @@
   url = {https://cas.web.cern.ch/sites/default/files/lectures/constanta-2018/l1.pdf},
 }
 
+@article{Calaga:2673544,
+      author        = "Calaga, Rama",
+      title         = "{Crab Cavities for the High-luminosity LHC}",
+      pages         = "THXA03. 5 p",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2673544",
+      doi           = "10.18429/JACoW-SRF2017-THXA03",
+}
+
 @misc{LHC_SPS_layout,
   title = {First Results from the Large Hadron Collider},
   author = {Hans Peter Beck},
@@ -79,6 +88,18 @@ of HL-LHC Double Quarter Wave Crab Cavities},
   note = {Accessed: 24-06-2022},
 }
 
+@article{Verdú-Andrés:2263119,
+      author        = "Verdú-Andrés, Silvia and Belomestnykh, Sergey and
+                       Ben-Zvi, Ilan and Calaga, Rama and Wu, Qiong and Xiao,
+                       Binping",
+      title         = "{Crab cavities for colliders: past, present and future}",
+      journal       = "Nucl. Part. Phys. Proc.",
+      volume        = "273-275",
+      pages         = "193-197. 5 p",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/2263119",
+      doi           = "10.1016/j.nuclphysbps.2015.09.025",
+}
 
 
 
