local vs global crbbing scheme

--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -7,3 +7,6 @@
 %\lipsum[1-2]
 
 
+%\textbf{Probably put to abstract}\\
+%In 2018, two prototype Crab Cavities (CCs) were installed in the SPS to be tested for the first time with proton beams. A series of dedicated machine developemnt studies was carried out in order to validate their working principle and answer various beam dynamic questions. One of the operational issues that needed to be addressed concerned the expected emittance growth due to noise in their RF system, which is the main subject this thesis.  As mentioned in chapter~\ref{Ch:CC_noise_theory} a theoretical model had already been developed and validated by trackig simulations~\cite{PhysRevSTAB.18.101001}. 
+%As a part of the first experiemental campaign with $\CC$s in SPS a dedicated experiment was conducted to benchmark these models with experimental data and confirm the analytical predictions. The objective of this chapter is to provide an overview of the machine setup for the $\CC$ experiements and introduce the instruments and methods used for measuring the beam parameters of interest for the emittance growth studies.
