add reference KEKB

--- a/references.bib
+++ b/references.bib
@@ -101,6 +101,44 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       doi           = "10.1016/j.nuclphysbps.2015.09.025",
 }
 
+@INPROCEEDINGS{CC_KEKB_4440798,
+  author={Abe, T. et al.},
+  booktitle={2007 IEEE Particle Accelerator Conference (PAC), Albuquerque, New Mexico, USA}, 
+  title={Beam operation with crab cavities at KEKB}, 
+  year={2007},
+  volume={TUPAN045},
+  number={},
+  pages={1487-1489},
+  doi={10.1109/PAC.2007.4440798}}
+
+
+@article{Funakoshi:1955812,
+      author        = "Funakoshi, Y.",
+      title         = "{Operational experience with crab cavities at KEKB}",
+      collaboration = "for the KEKB Commissioning Group",
+      archivePrefix = "arXiv",
+      eprint        = "1410.4036",
+      pages         = "27-36. 10 p",
+      month         = "Oct",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1955812",
+      note          = "Comments: 10 pages, contribution to the ICFA Mini-Workshop
+                       on Beam-Beam Effects in Hadron Colliders, CERN, Geneva,
+                       Switzerland, 18-22 Mar 2013",
+      doi           = "10.5170/CERN-2014-004.27",
+}
+
+@inproceedings{oide:pac07-mozaki01,
+    author = {K. Oide et al.},
+    title = {{Compensation of the Crossing Angle with Crab Cavities at KEKB}},
+    booktitle = {Proc. PAC'07},
+    pages = {27--31},
+    paper = {MOZAKI01},
+    venue = {Albuquerque, NM, USA, Jun. 2007},
+    publisher = {JACoW Publishing, Geneva, Switzerland},
+    url = {https://jacow.org/p07/papers/MOZAKI01.pdf},
+    language = {english}
+}
 
 
 @article{PhysRevSTAB.18.101001,
