start difference between hadron and lepton beams

--- a/references.bib
+++ b/references.bib
@@ -140,6 +140,19 @@ of HL-LHC Double Quarter Wave Crab Cavities},
     language = {english}
 }
 
+@article{Calaga:2773279,
+      author        = "Calaga, R. et al.",
+      title         = "{First demonstration of the use of crab cavities on hadron
+                       beams}",
+      journal       = "Phys. Rev. Accel. Beams",
+      reportNumber  = "6",
+      volume        = "24",
+      pages         = "062001. 6 p",
+      year          = "2021",
+      url           = "https://cds.cern.ch/record/2773279",
+      doi           = "10.1103/PhysRevAccelBeams.24.062001",
+}
+
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
