leptons vs hadrons

--- a/references.bib
+++ b/references.bib
@@ -153,6 +153,24 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       doi           = "10.1103/PhysRevAccelBeams.24.062001",
 }
 
+@article{Alekou:2696109,
+      author        = "Alekou, Androula and Appleby, Robert and Bartosik, Hannes
+                       and Carlà, Michele and Papaphilippou, Yannis",
+      title         = "{Beam dynamics simulations with Crab Cavities in the SPS
+                       machine}",
+      reportNumber  = "CERN-ACC-2019-147",
+      pages         = "MOPGW095. 4 p",
+      year          = "2019",
+      url           = "https://cds.cern.ch/record/2696109",
+      doi           = "10.18429/JACoW-IPAC2019-MOPGW095",
+}
+
+@misc{BE_seminar,
+  title = {First proton beam dynamics results with crab cavities},
+  author = {Carver Lee},
+  url  =  {https://indico.cern.ch/event/800428/attachments/1804664/2945632/CrabCavity_BE_Seminar.pdf},
+  note = {Accessed: 10-11-2021},
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
@@ -316,12 +334,7 @@ of HL-LHC Double Quarter Wave Crab Cavities},
 
 
 
-@misc{BE_seminar,
-  title = {First proton beam dynamics results with crab cavities},
-  author = {Carver Lee},
-  url  =  {https://indico.cern.ch/event/800428/attachments/1804664/2945632/CrabCavity_BE_Seminar.pdf},
-  note = {Accessed: 10-11-2021},
-}
+
 
 @misc{HT_calibration_2018,
   title = {Beam instrumentation with SPS Crabs},
