references on DQW and RFD

--- a/references.bib
+++ b/references.bib
@@ -165,6 +165,61 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       doi           = "10.18429/JACoW-IPAC2019-MOPGW095",
 }
 
+@article{Zanoni:2288282,
+      author        = "Zanoni, C. et al",
+      title         = "{Design of Dressed Crab Cavities for the HL-LHC Upgrade}",
+      pages         = "THPB070. 5 p",
+      year          = "2015",
+      url           = "https://cds.cern.ch/record/2288282",
+      doi           = "10.18429/JACoW-SRF2015-THPB070",
+}
+
+@article{DeSilva:2288607,
+      author        = "De Silva, Subashini and Delayen, Jean and Li, Zenghai and
+                       Park, HyeKyoung",
+      title         = "{Electromagnetic Design of 400 MHz RF-Dipole Crabbing
+                       Cavity for LHC High Luminosity Upgrade}",
+      pages         = "THPB053. 5 p",
+      year          = "2015",
+      url           = "https://cds.cern.ch/record/2288607",
+      doi           = "10.18429/JACoW-SRF2015-THPB053",
+}
+
+@article{Xiao:1992565,
+      author        = "Xiao, Binping and Alberty, Luís and Belomestnykh, Sergey
+                       and Ben-Zvi, Ilan and Calaga, Rama and Cullen, Chris and
+                       Capatina, Ofelia and Hammons, Lee and Li, Zenghai and
+                       Marques, Carlos and Skaritka, John and Verdú-Andres,
+                       Silvia and Wu, Qiong",
+      title         = "{Design, prototyping and testing of a compact
+                       superconducting double quarter wave crab cavity}",
+      journal       = "Phys. Rev. Spec. Top. Accel. Beams",
+      archivePrefix = "arXiv",
+      eprint        = "1502.04088",
+      reportNumber  = "CERN-ACC-2015-0158",
+      volume        = "18",
+      pages         = "041004. 10 p",
+      month         = "Feb",
+      year          = "2015",
+      url           = "https://cds.cern.ch/record/1992565",
+      doi           = "10.1103/PhysRevSTAB.18.041004",
+}
+
+@article{Verdú-Andrés:2113440,
+      author        = "Verdú-Andrés, S and Skaritka, J and Wu, Q and Xiao, B P
+                       and Belomestnykh, S and Ben-Zv, I and Alberty, L and
+                       Artoos, Kurt and Calaga, Rama and Capatina, Ofelia and
+                       Capelli, Teddy and Carra, Federico and Leuxe, Raphael and
+                       Kuder, Norbert and Zanoni, Carlo and Li, Z and Ratti, A",
+      title         = "{Design and Prototyping of HL-LHC Double Quarter Wave Crab
+                       Cavities for SPS Test}",
+      reportNumber  = "CERN-ACC-2015-0183",
+      pages         = "3 p",
+      month         = "May",
+      year          = "2015",
+      url           = "https://cds.cern.ch/record/2113440",
+}
+
 @misc{BE_seminar,
   title = {First proton beam dynamics results with crab cavities},
   author = {Carver Lee},
