add references for hl-lhc target

--- a/references.bib
+++ b/references.bib
@@ -314,6 +314,36 @@ of HL-LHC Double Quarter Wave Crab Cavities},
 	title = {The crab cavities cryomodule for {SPS} test}
 }
 
+@techreport{MedinaMedrano:2301928,
+      author        = "Medina Medrano, Luis Eduardo and Tomas Garcia, Rogelio and
+                       Arduini, Gianluigi and Napsuciale, Mauro",
+      title         = "{Effective pile-up density as a measure of the
+                       experimental data quality for High-Luminosity LHC
+                       operational scenarios. }",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "CERN-ACC-2018-0003",
+      month         = "Jan",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2301928",
+}
+
+@misc{CC_lumi_limits_philippe,
+  title = {Crab Cavity RF noise: Update 2},
+  author = {P. Baudrenghien, T. Mastoridis},
+  url  =  {https://indico.cern.ch/event/1044711/contributions/4389271/attachments/2264292/3861025/CC_Noise_Feedback_PB.pdf},
+  note = {Accessed: 27-06-2022},
+}
+
+@misc{CC_lumi_limits_ilias,
+  title = {Luminosity estimates including noise from crab cavities (without feedback},
+  author = {I. Ilias Efthymiopoulos},
+  url  =  {https://indico.cern.ch/event/1044711/contributions/4389268/attachments/2264203/3844208/ie_WP2CCemitBU_14.06.2021.pdf},
+  note = {Accessed: 27-06-2022},
+}
+
+
+
 @article{Calaga:2649807,
       author        = "Calaga, Rama and Capatina, Ofelia and Vandoni, Giovanna",
       title         = "{The SPS Tests of the HL-LHC Crab Cavities}",
