--- a/references.bib
+++ b/references.bib
@@ -220,12 +220,23 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       url           = "https://cds.cern.ch/record/2113440",
 }
 
+
+@book{wolski2014,
+  title     = "Beam Dynamics in High Energy Particle Accelerators",
+  author    = "Andrzej Wolski",
+  year      = 2014,
+  publisher = "Imperial College Press"
+}
+```
+
+
 @misc{BE_seminar,
   title = {First proton beam dynamics results with crab cavities},
   author = {Carver Lee},
   url  =  {https://indico.cern.ch/event/800428/attachments/1804664/2945632/CrabCavity_BE_Seminar.pdf},
   note = {Accessed: 10-11-2021},
 }
+
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
