--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -4,3 +4,5 @@
 \markboth{Acknowledgments}{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments} % adds an entry to the table of contents
 % put your text here
+
+%From Xavier's thesis: The CERN organisation deserves acknowledgement for financing this study and providing resources including, of course, beam time for experimental studies.
