ref to the period over which the integrated luminosity of lhc and hl lhc is computed

--- a/references.bib
+++ b/references.bib
@@ -228,7 +228,14 @@ of HL-LHC Double Quarter Wave Crab Cavities},
   publisher = "Imperial College Press"
 }
 ```
-
+@book{Brunning_Rossi,
+  title     = "The High Luminosity Large Hadron Collider: the New Machine for Illuminating the Mysteries of Universe",
+  author    = "O. Brüning and L. Rossi",
+  year      = 2015,
+  publisher = "World Scientic Publishing Company",
+  volume = 24, 
+  doi = https://doi.org/10.1142/9581 
+}
 
 @misc{BE_seminar,
   title = {First proton beam dynamics results with crab cavities},
