--- a/mypackages.sty
+++ b/mypackages.sty
@@ -9,7 +9,7 @@
 
 \usepackage{amsmath}  % improve math presentation
 \usepackage{graphicx, wrapfig, subcaption, setspace, booktabs}
-
+\usepackage{enumitem} % remove space between items
 %-------------------------------
 % Header and Footer
 %-------------------------------
