--- a/references.bib
+++ b/references.bib
@@ -244,6 +244,12 @@ of HL-LHC Double Quarter Wave Crab Cavities},
   note = {Accessed: 10-11-2021},
 }
 
+@article{Beth:889480,
+      author        = "Beth, R A",
+      title         = "{Complex Methods for Three-Dimensional Magnetic Fields}",
+      year          = "1971",
+      url           = "https://cds.cern.ch/record/889480",
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
