--- a/mypackages.sty
+++ b/mypackages.sty
@@ -13,7 +13,7 @@
 %-------------------------------
 % Header and Footer
 %-------------------------------
-
+\usepackage{mathtools} % for dcases --> to introduce mutliple cases in a function
 
 \usepackage{fancyhdr} 
 \pagestyle{fancy}
