--- a/references.bib
+++ b/references.bib
@@ -251,6 +251,15 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       url           = "https://cds.cern.ch/record/889480",
 }
 
+@book{Lee:1425444,
+      author        = "Lee, S Y",
+      title         = "{Accelerator physics; 3rd ed.}",
+      publisher     = "World Scientific",
+      address       = "Singapore",
+      year          = "2012",
+      url           = "https://cds.cern.ch/record/1425444",
+}
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
