--- a/references.bib
+++ b/references.bib
@@ -260,6 +260,18 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       url           = "https://cds.cern.ch/record/1425444",
 }
 
+@article{Floquet1883,
+  doi = {10.24033/asens.220},
+  url = {https://doi.org/10.24033/asens.220},
+  year = {1883},
+  publisher = {Societe Mathematique de France},
+  volume = {12},
+  pages = {47--88},
+  author = {G. Floquet},
+  title = {Sur les {\'{e}}quations diff{\'{e}}rentielles lin{\'{e}}aires {\`{a}} coefficients p{\'{e}}riodiques},
+  journal = {Annales scientifiques de l{\textquotesingle}{\'{E}}cole normale sup{\'{e}}rieure}
+}
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
