introduce twiss paramters

--- a/references.bib
+++ b/references.bib
@@ -261,15 +261,16 @@ of HL-LHC Double Quarter Wave Crab Cavities},
 }
 
 @article{Floquet1883,
-  doi = {10.24033/asens.220},
-  url = {https://doi.org/10.24033/asens.220},
-  year = {1883},
-  publisher = {Societe Mathematique de France},
-  volume = {12},
-  pages = {47--88},
-  author = {G. Floquet},
-  title = {Sur les {\'{e}}quations diff{\'{e}}rentielles lin{\'{e}}aires {\`{a}} coefficients p{\'{e}}riodiques},
-  journal = {Annales scientifiques de l{\textquotesingle}{\'{E}}cole normale sup{\'{e}}rieure}
+author = {Floquet, G.},
+journal = {Annales scientifiques de l'École Normale Supérieure},
+keywords = {linear differential equation; periodic coefficient},
+language = {fre},
+pages = {47-88},
+publisher = {Elsevier},
+title = {Sur les équations différentielles linéaires à coefficients périodiques},
+url = {http://eudml.org/doc/80895},
+volume = {12},
+year = {1883},
 }
 
 @article{PhysRevSTAB.18.101001,
