--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,9 @@
 \newcommand{\fourierxform}[1]{\hat{#1}}
 \newcommand{\imagunit}{{i}}
 
+\setcounter{tocdepth}{5} % These lines are needed for subsubsection to appear
+\setcounter{secnumdepth}{5}
+
 \begin{document}
 \frontmatter
 % The front matter
