add figure for emittance

--- a/references.bib
+++ b/references.bib
@@ -273,6 +273,22 @@ volume = {12},
 year = {1883},
 }
 
+@article{Wolski:1982424,
+      author        = "Wolski, Andrzej",
+      title         = "{Low-emittance Storage Rings}",
+      archivePrefix = "arXiv",
+      eprint        = "1507.02213",
+      reportNumber  = "arXiv:1507.02213",
+      pages         = "245-294. 50 p",
+      month         = "Jul",
+      year          = "2015",
+      url           = "https://cds.cern.ch/record/1982424",
+      note          = "Presented at the CERN Accelerator School CAS 2013:
+                       Advanced Accelerator Physics Course, Trondheim, Norway,
+                       18-29 August 2013",
+      doi           = "10.5170/CERN-2014-009.245",
+}
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
