geometric emittance of bunch

--- a/references.bib
+++ b/references.bib
@@ -289,6 +289,14 @@ year = {1883},
       doi           = "10.5170/CERN-2014-009.245",
 }
 
+@misc{tirsi_thesis_presentation,
+  title = {Transverse Emittance and Brightness Studies at Extraction of the CERN PS Booster},
+  author = {Tirsi Prebibaj },
+  url  =  {https://indico.cern.ch/event/849052/contributions/3567761/attachments/1910604/3166225/semfe_thesis_presentation_tprebibaj_final.pdf},
+  note = {Accessed: 12-07-2021},
+}
+
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
