--- a/main.tex
+++ b/main.tex
@@ -84,7 +84,7 @@
 % The end matter
 \printglossaries
 \appendix
-\chapter{Definitions and  methods of statistical analysis}
+\chapter{Definitions and  methods of statistical analysis}\label{ch:app_A}
 \input{appendix/appendix}
 \chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
