complete emittance definitions

--- a/references.bib
+++ b/references.bib
@@ -296,6 +296,16 @@ year = {1883},
   note = {Accessed: 12-07-2021},
 }
 
+@article{Buon:216507,
+      author        = "Buon, Jean",
+      title         = "{Beam phase space and emittance}",
+      reportNumber  = "LAL-RT-90-15",
+      pages         = "23 p",
+      month         = "Dec",
+      year          = "1990",
+      url           = "https://cds.cern.ch/record/216507",
+      doi           = "10.5170/CERN-1991-004.30",
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
