add closed orbit figure in the presence of dispersion

--- a/references.bib
+++ b/references.bib
@@ -307,6 +307,15 @@ year = {1883},
       doi           = "10.5170/CERN-1991-004.30",
 }
 
+@misc{Holzer_summer_students_introduction,
+  title = {Introduction to Accelerator Physics
+Beam Dynamics for Summer Students},
+  author = {Bernhard Holzer},
+  url  =  {https://indico.cern.ch/event/91711/attachments/1096595/1564350/Summer_Stud_Holzer_2010.pdf},
+  note = {Accessed: 13-07-2021},
+}
+
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
