--- a/references.bib
+++ b/references.bib
@@ -308,13 +308,18 @@ year = {1883},
 }
 
 @misc{Holzer_summer_students_introduction,
-  title = {Introduction to Accelerator Physics
-Beam Dynamics for Summer Students},
+  title = {Introduction to Accelerator Physics Beam Dynamics for Summer Students},
   author = {Bernhard Holzer},
   url  =  {https://indico.cern.ch/event/91711/attachments/1096595/1564350/Summer_Stud_Holzer_2010.pdf},
   note = {Accessed: 13-07-2021},
 }
 
+@misc{Wolski_uspas,
+  title = {Design of Electron Storage and Damping Rings, Part 5: Coupling and Alignment},
+  author = {David Newton and Andy Wolski},
+  url  =  {https://uspas.fnal.gov/materials/13CSU/Lecture5.pdf},
+  note = {Accessed: 13-07-2021},
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
