add appendix for solutions of betatron motion

--- a/main.tex
+++ b/main.tex
@@ -88,7 +88,7 @@
 \input{appendix/appendix}
 \chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
-\chapter{Appendix c}\label{ch:app_B}
+\chapter{Appendix C}\label{ch:app_B}
 \input{appendix/appendix_c}
 \chapter{Glossary and defintions}
 \input{appendix/glossary}
