--- a/references.bib
+++ b/references.bib
@@ -260,6 +260,7 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       url           = "https://cds.cern.ch/record/1425444",
 }
 
+
 @article{Floquet1883,
 author = {Floquet, G.},
 journal = {Annales scientifiques de l'École Normale Supérieure},
@@ -897,4 +898,14 @@ doi = {10.18429/JACoW-IPAC2021-WEPAB215}
   title = {PyHEADTAIL code repository},
   url  =  {https://github.com/PyCOMPLETE/},
   note = {Accessed: 19-6-2022},
+}
+
+
+@misc{yannis_teaching,
+  title = {Transverse motion},
+  author = {Yannis Papaphilippou},
+  url  =  {https://yannis.web.cern.ch/teaching/transverse.pdf},
+  howpublished = {United States Particle Accelerator School, University of California - Santa Cruz, Santa Rosa, CA},
+  year={2008},
+  note = {Accessed: 14-07-2022},
 }
