add reference to resonances

--- a/references.bib
+++ b/references.bib
@@ -322,6 +322,16 @@ year = {1883},
   note = {Accessed: 13-07-2021},
 }
 
+@book{Wiedemann:1083415,
+      author        = "Wiedemann, Helmut",
+      title         = "{Particle accelerator physics; 4th ed.}",
+      publisher     = "Springer",
+      address       = "Berlin",
+      year          = "2015",
+      url           = "https://link.springer.com/content/pdf/10.1007/978-3-319-18317-6.pdf",
+      doi           = "10.1007/978-3-319-18317-6",
+}
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
