--- a/references.bib
+++ b/references.bib
@@ -332,6 +332,32 @@ year = {1883},
       doi           = "10.1007/978-3-319-18317-6",
 }
 
+@article{Rumolo:1982422,
+      author        = "Rumolo, G",
+      title         = "{Beam Instabilities}",
+      reportNumber  = "arXiv:1601.05201",
+      pages         = "21 p",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1982422",
+      note          = "Comments: 21 pages, contribution to the CAS - CERN
+                       Accelerator School: Advanced Accelerator Physics Course,
+                       Trondheim, Norway, 18-29 Aug 2013",
+      doi           = "10.5170/CERN-2014-009.199",
+}
+
+@article{Herr:1982428,
+      author        = "Herr, W",
+      title         = "{Introduction to Landau Damping}",
+      reportNumber  = "arXiv:1601.05227",
+      pages         = "27 p",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1982428",
+      note          = "Comments: 27 pages, contribution to the CAS - CERN
+                       Accelerator School: Advanced Accelerator Physics Course,
+                       Trondheim, Norway, 18-29 Aug 2013",
+      doi           = "10.5170/CERN-2014-009.377",
+}
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
