detuning with octupoles

--- a/references.bib
+++ b/references.bib
@@ -357,6 +357,26 @@ year = {1883},
                        Trondheim, Norway, 18-29 Aug 2013",
       doi           = "10.5170/CERN-2014-009.377",
 }
+@misc{Barletta_uspas,
+  title = {Limiting phenomena in rings: coherent & incoherent effects, Unit 8 -  Lecture 19},
+  author = {William A. Barletta},
+  url  =  {https://uspas.fnal.gov/materials/09UNM/Unit_8_Lecture_19_Limting_phenomena.pdf
+},
+  note = {Accessed: 18-07-2021},
+}
+
+@techreport{Gareyte:321824,
+      author        = "Gareyte, Jacques and Koutchouk, Jean-Pierre and Ruggiero,
+                       F",
+      title         = "{Landau damping dynamic aperture and octupole in LHC}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "LHC-Project-Report-91, CERN-LHC-Project-Report-91",
+      month         = "Feb",
+      year          = "1997",
+      url           = "https://cds.cern.ch/record/321824",
+      note          = "revised version number 1 submitted on 2003-08-21 14:12:02",
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
