almost complete longitudinal motion

--- a/references.bib
+++ b/references.bib
@@ -377,6 +377,13 @@ year = {1883},
       url           = "https://cds.cern.ch/record/321824",
       note          = "revised version number 1 submitted on 2003-08-21 14:12:02",
 }
+@misc{emetral_juas_2018,
+  title = {Longitudinal beam dynamics},
+  author = {Elias Metral},
+  url  =  {
+http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
+  note = {Accessed: 19-07-2021},
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
