add references for phase stability. This is the end of the longitudinal motion

--- a/references.bib
+++ b/references.bib
@@ -385,6 +385,39 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
   note = {Accessed: 19-07-2021},
 }
 
+@article{McMillan:1945zz,
+    author = "McMillan, Edwin M.",
+    title = "{The Synchrotron-A Proposed High Energy Particle Accelerator}",
+    doi = "10.1103/PhysRev.68.143",
+    journal = "Phys. Rev.",
+    volume = "68",
+    pages = "143--144",
+    year = "1945"
+}
+
+@article{Veksler_1,
+    author = "Veksler V. I.",
+    title = "{A new method of accelerating relativistic particles}",
+    journal = "Dokl. Akad. Nauk SSSR",
+    volume = "44",
+    pages = "346-348",
+    year = "1944",
+    uril = "http://www1.jinr.ru/Books/veksler/12.pdf",
+    note = "(in Russian)"
+}
+
+@article{Veksler_2,
+    author = "Veksler V. I.",
+    title = "{About the bew method of accelerating relativistic particles}",
+    journal = "Dokl. Akad. Nauk SSSR",
+    volume = "44",
+    pages = "393-366",
+    year = "1944",
+    uril = "http://www1.jinr.ru/Books/veksler/13.pdf",
+    note = "(in Russian)"
+}
+
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
