update definitions of coherent and incoherent motion

--- a/references.bib
+++ b/references.bib
@@ -417,6 +417,17 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
     note = "(in Russian)"
 }
 
+@article{Zimmermann:2264408,
+      author        = "Zimmermann, Frank",
+      title         = "{Introduction to Collective Effects in Particle
+                       Accelerators}",
+      journal       = "ICFA Beam Dyn. Newsl.",
+      volume        = "69",
+      pages         = "8-17. 10 p",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/2264408",
+}
+
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
