complete intro in collective effects

--- a/references.bib
+++ b/references.bib
@@ -428,6 +428,18 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
       url           = "https://cds.cern.ch/record/2264408",
 }
 
+@article{Rumolo:1982422,
+      author        = "Rumolo, G",
+      title         = "{Beam Instabilities}",
+      reportNumber  = "arXiv:1601.05201",
+      pages         = "21 p",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1982422",
+      note          = "Comments: 21 pages, contribution to the CAS - CERN
+                       Accelerator School: Advanced Accelerator Physics Course,
+                       Trondheim, Norway, 18-29 Aug 2013",
+      doi           = "10.5170/CERN-2014-009.199",
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
