--- a/references.bib
+++ b/references.bib
@@ -220,7 +220,6 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       url           = "https://cds.cern.ch/record/2113440",
 }
 
-
 @book{wolski2014,
   title     = "Beam Dynamics in High Energy Particle Accelerators",
   author    = "Andrzej Wolski",
@@ -259,7 +258,6 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       year          = "2012",
       url           = "https://cds.cern.ch/record/1425444",
 }
-
 
 @article{Floquet1883,
 author = {Floquet, G.},
@@ -439,6 +437,19 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
                        Accelerator School: Advanced Accelerator Physics Course,
                        Trondheim, Norway, 18-29 Aug 2013",
       doi           = "10.5170/CERN-2014-009.199",
+}
+
+@misc{madx,
+  title = {MAD-X: Methodical Accelerator Design},
+  author = {Laurent Deniau (editor)},
+  url  =  {https://mad.web.cern.ch/madx/},
+  note = {Accessed: 20-07-2022},
+}
+
+@misc{cern_optics_repo,
+  title = {Official optics repository of the CERN accelerators},
+  url  =  {https://gitlab.cern.ch/acc-models},
+  note = {Accessed: 20-07-2022},
 }
 
 @article{PhysRevSTAB.18.101001,
