--- a/references.bib
+++ b/references.bib
@@ -452,6 +452,12 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
   note = {Accessed: 20-07-2022},
 }
 
+@misc{sixtracklib_repo,
+  title = {Sixtracklib code repository},
+  url  =  {https://github.com/SixTrack/sixtracklib},
+  note = {Accessed: 20-07-2022},
+}
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
