--- a/references.bib
+++ b/references.bib
@@ -458,6 +458,27 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
   note = {Accessed: 20-07-2022},
 }
 
+@misc{sixtracklib_introduction,
+  title = {Introducing Sixtracklib},
+  author = {Martin Schwinzerl et al},
+  url  =  {https://indico.cern.ch/event/833895/contributions/3577803/attachments/1927226/3190636/intro_sixtracklib.pdf},
+  note = {Accessed: 20-07-2022},
+}
+
+@article{Schwinzerl:2781835,
+      author        = "Schwinzerl, Martin and De Maria, Riccardo and Paraschou,
+                       Konstantinos and Bartosik, Hannes and Iadarola, Giovanni
+                       and Oeftiger, Adrian",
+      title         = "{Optimising and Extending A Single-Particle Tracking
+                       Library For High Parallel Performance. OPTIMISING AND
+                       EXTENDING A SINGLE-PARTICLE TRACKING LIBRARY FOR HIGH
+                       PARALLEL PERFORMANCE}",
+      month         = "Sep",
+      year          = "2021",
+      url           = "https://cds.cern.ch/record/2781835",
+      doi           = "10.18429/JACoW-IPAC2021-THPAB190",
+}
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
